Documentando api corredores
