# public/swagger/swagger.json
@@ -263,6 +263,162 @@
                     }
                 }
             }
+        },
+        "/api/corredor": {
+            "get": {
+                "tags": [
+                    "Corredor"
+                ],
+                "summary": "Lista de corredores",
+                "operationId": "App\\Http\\Controllers\\CorredorController::index",
+                "responses": {
+                    "200": {
+                        "description": "Sucesso",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "object",
+                                            "example": [
+                                                {
+                                                    "id": 1,
+                                                    "nome": "Lizandro",
+                                                    "cpf": "04397588157",
+                                                    "data_nascimento": "1994-07-11T03:00:00.000000Z",
+                                                    "idade": 18,
+                                                    "created_at": "2021-04-28T21:14:54.000000Z",
+                                                    "updated_at": "2021-04-28T21:14:54.000000Z"
+                                                },
+                                                {
+                                                    "id": 2,
+                                                    "nome": "Lizandro",
+                                                    "cpf": "04397588156",
+                                                    "data_nascimento": "1994-07-11T03:00:00.000000Z",
+                                                    "idade": 18,
+                                                    "created_at": "2021-04-28T21:15:00.000000Z",
+                                                    "updated_at": "2021-04-28T21:15:00.000000Z"
+                                                }
+                                            ]
+                                        },
+                                        "mensagem": {
+                                            "type": "string",
+                                            "example": "Operação realizada com sucesso."
+                                        },
+                                        "sucesso": {
+                                            "type": "bool",
+                                            "example": "true"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Erro",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "mensagem": {
+                                            "type": "string",
+                                            "example": "Erro ao realizar operação."
+                                        },
+                                        "sucesso": {
+                                            "type": "bool",
+                                            "example": "false"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Corredor"
+                ],
+                "summary": "Cria corredor",
+                "operationId": "App\\Http\\Controllers\\CorredorController::store",
+                "requestBody": {
+                    "description": "Exemplo para gerar classificações",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "nome",
+                                    "cpf",
+                                    "data_nascimento"
+                                ],
+                                "properties": {
+                                    "nome": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "Nome do candidato"
+                                    },
+                                    "cpf": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "00000000000"
+                                    },
+                                    "data_nascimento": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "1994-11-07"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Sucesso",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "mensagem": {
+                                            "type": "string",
+                                            "example": "Operação realizada com sucesso."
+                                        },
+                                        "sucesso": {
+                                            "type": "bool",
+                                            "example": "true"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Erro",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "mensagem": {
+                                            "type": "string",
+                                            "example": "Erro ao realizar operação."
+                                        },
+                                        "sucesso": {
+                                            "type": "bool",
+                                            "example": "false"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 }
